[tool.poetry]
name = "handler-api"
version = "0.1.0"
description = "A wrapper for the JS API that handles WhatsApp client."
authors = ["Rio's Data Office"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.1"
requests = "^2.27.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pylint = "^2.13.4"
pre-commit = "^2.17.0"
flake8 = "^4.0.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
